k8s/aws/pern/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pern-api
  namespace: pern
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - PERN_APP_HOST
      secretName: pern-tls
  rules:
    - host: PERN_APP_HOST
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pern-server
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pern-web
  namespace: pern
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - PERN_APP_HOST
      secretName: pern-tls
  rules:
    - host: PERN_APP_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pern-client
                port:
                  number: 3000
